--- a/packages/react-swipeable-views-utils/package.json
+++ b/packages/react-swipeable-views-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-swipeable-views-utils",
+  "name": "@golden-unicorn/react-swipeable-views-utils",
   "version": "0.13.1",
   "description": "react-swipeable-views utility modules",
   "main": "lib/index.js",
@@ -20,7 +20,7 @@
     "keycode": "^2.1.7",
     "prop-types": "^15.6.0",
     "react-event-listener": "^0.6.0",
-    "react-swipeable-views-core": "^0.13.1"
+    "@golden-unicorn/react-swipeable-views-core": "^0.13.1"
   },
   "devDependencies": {
     "pkgfiles": "^2.3.2"
